# hakoiri-musume

./: .gitignore  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts  wrangler.jsonc
.github/: copilot-instructions.md
.github/agents/: maintainer.agent.md  planner.agent.md  reviewer.agent.md  tester.agent.md
.github/prompts/: fix-batch.prompt.md  maintainer.prompt.md  planner.prompt.md  review-batch.prompt.md  reviewer.prompt.md  tester.prompt.md
dev-docs/: README.md  analytics.md  deploy.md  fb-to-llm.md  kick-off.md  llm-msg-bd.md  progress.md  roadmap.yml  summary.md
dev-docs/archive/: llm-msg-bd.md  roadmap.yml.example
dev-docs/tasks/20260408-001-show-min-moves/: plan.md  review.md  status.json  task.md  worklog.md
dev-docs/tasks/20260408-002-solver-web-worker/: plan.md  review.md  status.json  task.md  worklog.md
dev-docs/tasks/20260408-003-hint-feature/: plan.md  review.md  status.json  task.md  worklog.md
dev-docs/tasks/20260408-004-solution-replay/: plan.md  review.md  status.json  task.md  worklog.md
dev-docs/tasks/20260411-005-high-traffic-readiness/: plan.md  review.md  status.json  task.md  worklog.md
dev-docs/templates/YYYYMMDD-001-title/: plan.md  status.json  task.md
public/: _headers
src/: main.ts  style.css
src/data/: ProgressStore.ts  puzzles.json
src/devtools/: gen_progress.py  gen_review_targets.py
src/game/: Board.ts  Solver.ts  SolverClient.ts  solver.worker.ts  types.ts
src/input/: InputHandler.ts
src/render/: Renderer.ts
src/ui/: ReplayController.ts  ScreenManager.ts
(+3 files in other folders)
